--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,22 @@ div {
     appearance: none;
 }
 
-#num1, #num2 {
+#num1 {
     margin: 0 62px 0 0;
+    padding: 13px 20px 30px 16px;
+    border-radius: 14px;
+    border: 1px solid rgba(255, 255, 255, 0.20);
+    background: rgba(255, 255, 255, 0.25);
+    width: 342px;
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 500;
+    opacity: 0.7;
+}
+
+#num2 {
     padding: 13px 20px 30px 16px;
     border-radius: 14px;
     border: 1px solid rgba(255, 255, 255, 0.20);
@@ -60,7 +74,7 @@ button {
     padding: 0 76px;
     justify-content: center;
     align-items: center;
-    border: none;
+    border-radius: 10px;
     cursor: pointer;
     background: #AEC346;
     color: #FFF;
@@ -77,4 +91,36 @@ button:hover {
 
 button:active {
     opacity: 0.7;
+}
+
+
+@media (max-width: 800px) {
+    img {
+        width: 50vw;
+        height: auto;
+        margin-top: 40px;
+    }
+    h1{
+        text-align:center;
+        font-size: 50px;
+        width: 90vw;
+        height: auto;
+        margin: 80px 0 30px;
+    }
+    #num1 {
+        margin: 50px 20px 0 20px;
+        padding: 10px;
+        width: 40vw;
+        height: auto;
+    }
+    #num2 {
+        margin: 50px 20px 0 0;
+        padding: 10px;
+        width: 40vw;
+        height: auto;
+    }
+    button {
+        width: 70vw;
+        height: 8vh;
+    }
 }
